[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Roguelike/EventWindow.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SilverGreaterCounter.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Roguelike/EventButton.gd" type="Script" id=3]
[ext_resource path="res://Textures/UI/Roguelike/DefaultWindowCompressed.png" type="Texture" id=4]
[ext_resource path="res://UI/Roguelike/EventButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Textures/UI/Roguelike/EventWindowBackCompressed.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

[node name="EventWindow" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 15, 105 )
texture = ExtResource( 4 )

[node name="EventButtons" type="VBoxContainer" parent="."]
margin_top = -360.0
margin_bottom = 360.0
custom_constants/separation = 180
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventName" parent="EventButtons" instance=ExtResource( 5 )]

[node name="Fight" parent="EventButtons" instance=ExtResource( 5 )]
margin_top = 180.0
margin_bottom = 180.0

[node name="Decklist" parent="EventButtons" instance=ExtResource( 5 )]
margin_top = 360.0
margin_bottom = 360.0

[node name="Death" parent="EventButtons" instance=ExtResource( 5 )]
margin_top = 540.0
margin_bottom = 540.0

[node name="Ascend" parent="EventButtons" instance=ExtResource( 5 )]
margin_top = 720.0
margin_bottom = 720.0

[node name="Back" parent="EventButtons" instance=ExtResource( 5 )]
margin_top = 900.0
margin_bottom = 900.0

[node name="RevealPileBack" type="Control" parent="."]
margin_left = 720.0
margin_top = 200.0
margin_right = 720.0
margin_bottom = 200.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="RevealPileBack"]
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="RevealPileBack"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -107.0
margin_right = 99.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="Button" type="TouchScreenButton" parent="RevealPileBack"]
position = Vector2( -220, -100 )
scale = Vector2( 22, 10 )
shape = SubResource( 1 )
